# iris.c

./: .gitignore  AGENTS.md  CMakeLists.txt  Makefile  README.md  WINDOWS.md  analyze_all.py  analyze_png.py  check_noise.py  check_png.py  check_png_data.py  check_png_meta.py  compare_builds.ps1  iris.c  iris.h  iris_cli.c  iris_cuda.c  iris_cuda.cu  iris_cuda.h  iris_cuda_kernels.cu  iris_getopt.c  iris_kernels.c  iris_platform.h  iris_qwen3.c  iris_safetensors.c  iris_sample.c  iris_tokenizer.c  iris_transformer_flux.c  iris_transformer_zimage.c  linenoise.c  main.c  terminals.c  windows_test.ps1
debug/: cublas_test.cu
scripts/: build_test.sh
